Fix link contrast

--- a/src/root.css
+++ b/src/root.css
@@ -20,7 +20,7 @@ body {
 }
 
 a {
-	color: rgb(139, 123, 51);
+	color: #77692C;
 	text-decoration: none;
 }
 
